--- a/pggapp/src/index.css
+++ b/pggapp/src/index.css
@@ -1,13 +1,10 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Flexo-Regular", "Roboto", arial, sans-serif;
+  /*background: #424242 url('https://live.staticflickr.com/5525/9284726402_caf107949e_k.jpg') no-repeat;*/
+  background-size: cover;
+  font: rgb(255, 255, 255);
+  /* Optional: To cover the entire background */
 }
