change app, about, colors, imagecollege, slides, homepage, detail. add social media, description, tvfooter, game

--- a/pggapp/src/App.css
+++ b/pggapp/src/App.css
@@ -6,12 +6,13 @@ html {
 h1 {
   text-align: center;
   font-size: 200%;
+  color: #382121
 }
 
 h2 {
   font-size: 200%;
-  color:chocolate;
   text-align: center;
+  color: #382121
 }
 
 button {
